--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Routinely Awesome",
-    "slug": "routinely_awesome",
+    "name": "unnamed project",
+    "slug": "unnamed_project",
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": [
