--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^10.0.3",
     "@react-native-community/async-storage": "^1.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "babel-preset-es2015": "^6.24.1",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
     "expo-constants": "^7.0.0",
@@ -26,10 +27,13 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-display-html": "^1.2.5",
+    "react-native-flip-toggle-button": "^1.0.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-hooks-persist": "^1.0.3",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0"
+    "react-navigation": "^3.12.0",
+    "rn-swipe-button": "^1.1.0",
+    "rn-toggle-switch": "^1.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
