--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-hooks-persist": "^1.0.3",
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0"
+    "react-navigation": "^3.12.0",
+    "react-step-progress-bar": "^1.0.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
